src/index.css
@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
@import url("https://unpkg.com/leaflet@1.9.4/dist/leaflet.css");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Lato", sans-serif;
}
/*app container*/
.container {
  display: grid;
  grid-template-rows: 60px 1fr;
  grid-template-columns: 50px 1fr;
  z-index: -2;
  background-color: #853d3d;
  color: #e9e9e9;
}
/*Header CSS*/
.header {
  background-color:   #853d3d;
  position: sticky;
  grid-row: 1 / 1;
  grid-column: 1 / 3;
  display: flex;
  align-items: center;
  justify-content: center;
}
/*Body CSS*/
.body {
  border-radius: 10px 10px 0px 0px;
  background-color: #e9e9e9;
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  justify-content: center;
  gap: 5px;
  font-size: 3rem;
  color: #e9e9e9;
  grid-row: 2 / 3;
  grid-column: 1 / 3;
  object-fit: contain;
  padding: 4%;
  padding-bottom: 0.5%;
  padding-top: 10px;
}
/*Animation when the sidebar open*/
.nav-menu.active~.body {
  transition: 450ms;
  margin-left: 10vw;
}
.nav-menu~.body {
  transition: 450ms;
  margin-left: 0ms;
}
/*Temporary content cards*/
.card {
  flex-grow: 1;
  min-height: 300px;
  width: auto;
  min-width: 20vw;
  background-color: #acacac;
  border: 1px solid rgb(0, 0, 0);
  border-radius: 10px;
  display: inline-flexbox;
  padding: 2px;
  text-align: center;
  position: relative;
  margin: 10px;
}
.card-title {
  border-bottom: 2px solid rgb(255, 255, 255);
  border-radius: 10px 10px 0 0; 
  margin-bottom: 20px;
  padding-left: 5px;
  font-size: 2rem;
  text-align: start;
  color: #000;
}
.card-name {
  font-size: auto;
}
.card-img{
  max-width: 30%;
  object-fit: scale-down;
}
.sample-img{
  border: 1px solid green;
  height: 350px;
  max-width: 100%;
  max-height: 100%;
  margin: 0;
  object-fit: contain;
}
/* Navbar CSS */
.navbar {
  background-color:  #853d3d;
  display: flex;
  align-items: center;
  align-content: center;
  justify-content: center;
  font-size: 50px;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  position: sticky;
  top: 0;
  border-radius: 0 0 20% ;
}
.menu-bar {
  color: #000;
  display: flex;
}

.menu-bar:hover {
  color: #acacac;
}

.close-tab {
  position: absolute;
  font-size: 3rem;
  color: #e9e9e9;
}
.close-tab:hover {
  color: black;
}

.nav-menu {
  background-color:  #853d3d;
  width: 10vw;
  min-width: 120px;
  height: 100vh;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: -100%;
  transition: 450ms;
}

.nav-menu.active {
  left: 0;
  transition: 450ms;
}

.nav-text {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 8px 0px 8px 8px;
  list-style: none;
  height: 60px;
  right: -1;
}

.nav-text a {
  text-decoration: none;
  color: #e9e9e9;
  font-size: 18px;
  width: 95%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 16px;
  border-radius: 10px;
}
.nav-text a:hover {
  background-color: #000000;
}
.nav-text.active a{
  background-color: #e9e9e9;
  border-radius: 10px 0px 0px 10px;
  margin-left: 5%;
  color: #000;
}
.nav-menu-items {
  width: 100%;
}

.navbar-toggle {
  background-color:   #853d3d;
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#nav-span {
  margin-right: 5px;
  display: flex;
  align-items: center;
  align-content: space-evenly;
  justify-content: center;
}

.controller {
  width: fit-content;
  height: auto;
  display: flex;
  align-items: center;
  align-content: space-evenly;
  justify-content: center;
  position: absolute;
  right: 10px;
}
.navbar-controller{
  width: fit-content;
  height: auto;
  display: flex;
  align-items: center;
  align-content: space-evenly;
  justify-content: center;
  position: absolute;
  bottom: 1vh;
}
.ctrl-button {
  border: 2px solid black;
  border-radius: 10px;
  font-size: 3rem;
  padding: 2px;
  margin: 2%;
  display: flex;
  align-items: center;
  align-content: space-evenly;
  justify-content: center;
}
.ctrl-button:hover {
  background-color: #000;
  color: white;
}


.status-card{
  border: 1px solid black;
  border-radius: 10px;
  background-color: #acacac;
  height: 80vh;
  width: 20vw;
  min-width: 350px;
  flex-grow: 1;
  margin: 10px;
  font-size: large;
  align-content: flex-start;
  padding: 2px;
  display: inline-block;
  position: relative;
}
.topic-list{
  width: 92%;
  height: 90%;
  position: absolute;
  display: inline-block;
  margin: 2%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.topic {
  display: inline-flex;
  margin: 5px;
  position: relative;
  width: 100%;
  height: 2em;
}
.topic-name{
  border-radius: 5px;
  border-bottom: 1px solid white;
  color: black;
  display: inline;
  font-size: large;
  position: absolute;
  width: 97%;
  height: 100%;
  align-items: center;
  align-content: center;
  justify-content: center;
  padding-left: 5%;
}
.topic-color {
  border-bottom: 1px solid#fff;
  display: inline-flex;
  position: absolute;
  width: 25%;
  height: 100%;
  right: 0;
  top: 0;
  bottom: 0;
  align-items: center;
  align-content: center;
  justify-content: center;
}
.topic-path{
  display: inline-flex;
  position: absolute;
  width: 60%;
  max-height: 100%;
  right: 5%;
  top: 0;
  bottom: 0;
  margin: 1%;
  padding-left: 2%;
  align-items: center;
  align-content: center;
  justify-content: center;
  overflow-x: hidden;
}
#server-box {
  border: 1px solid green;
  height: 3rem;
  max-width: 60%;
  min-width: 20%;
  margin-left: 30%;
  margin-right: 30%
}
#server-text {
  max-width: 50%;
  min-width: 40%;
  right: 5%;
}
#save-config {
  width: 40%;
  font-size: 2rem;
  position: absolute;
  bottom: 2%;
  right: 2%;
}
#light{
  background: rgb(255, 255, 255);
}
#dark {
  background: hsl(0, 0%, 100%);
}
#red{
  background: red;
}
#green {
  background: green;
}

